# localsub

./: .gitignore  CLAUDE.md  LICENSE  README.ko.md  README.md  SPEC.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
landing/: README.md  index.html
python-server/: cuda_selftest.py  diarization_engine.py  diarization_router.py  embedding_gate.py  gpu_utils.py  llm_engine.py  main.py  prompt_builder.py  quality_filters.py  requirements.txt  runtime_router.py  stt_engine.py  stt_router.py  test_api_endpoints.py  test_diarization_engine.py  test_embedding_gate.py  test_job_management.py  test_llm_engine.py  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: cuda_selftest.gguf  integrity.json  model_catalog.json
src-tauri/resources/default_vocabularies/: ja-common-expressions.json
src-tauri/src/: commands.rs  commands_config.rs  commands_csv.rs  commands_diarization.rs  commands_export.rs  commands_ffmpeg.rs  commands_job.rs  commands_model.rs  commands_preset.rs  commands_runtime.rs  commands_stt.rs  commands_subtitle.rs  commands_subtitle_import.rs  commands_translate.rs  commands_vocabulary.rs  commands_wizard.rs  config_manager.rs  contracts.rs  csv_reader.rs  error.rs  hw_detector.rs  integrity.rs  job.rs  job_manager.rs  lib.rs  main.rs  manifest_manager.rs  model_downloader.rs  preset_manager.rs  python_manager.rs  setup_manager.rs  sse_client.rs  state.rs  subtitle_manager.rs  subtitle_reader.rs  subtitle_writer.rs  utils.rs  vocabulary_manager.rs
(+129 files in other folders)
